@@ -52,7 +52,7 @@ $langvars = BntTranslate::load ($db, $lang, array ('main', 'login', 'logout', 'i
 $variables = null;
 $variables['lang'] = $lang;
 $variables['link'] = $link;
-$variables['link_forums'] = $link_forums;
+$variables['link_forums'] = $bntreg->get("link_forums");
 $variables['admin_mail'] = $admin_mail;
 $variables['body_class'] = 'index';
 
