@@ -267,12 +267,7 @@ echo "      <div style='padding-left:4px; text-align:left;'><a class='mnu' href=
 #echo "      <div style='padding-left:4px; text-align:left;'><a class='mnu' href='maint_info.php' title='This will display the Scheduled Maintenance information for this game or Core Code.'><span style='font-size:8px; color:#ff0; font-style:normal;'>NEW</span> Maint Info</a></div>\n";
 #echo "      <div style='padding-left:4px; text-align:left;'><a class='mnu' href='rules.php' title='These are our Rules that you have agreed to.'><span style='font-size:8px; color:#ff0; font-style:normal;'>NEW</span> Our Rules</a></div>\n";
 #echo "      <div style='padding-left:4px; text-align:left;'><a class='mnu' href='mail.php?mail={$_SESSION['username']}' title='Request your login information to be emailed to you.'><span style='font-size:8px; color:#ff0; font-style:normal;'>TMP</span> REQ Password</a></div>\n";
-
-if (!empty ($link_forums))
-{
-    echo "      <div style='padding-left:4px; text-align:left;'><a class='mnu' href='{$link_forums}'>{$langvars['l_forums']}</a></div>\n";
-}
-
+echo "      <div style='padding-left:4px; text-align:left;'><a class='mnu' href='" . $bntreg->get("link_forums") . "'>{$langvars['l_forums']}</a></div>\n";
 echo "    </td>\n";
 echo "  </tr>\n";
 echo "  <tr>\n";
