@@ -1,3 +1,7 @@
+TheKabal (10 August 2013)
+--------------------------------------
+Migrate the $link_forums variable to use the $bntreg.
+
 TheMightyDude (28 August 2013)
 --------------------------------------
 Fixed "Five Finger Discount" Traderoute bug that allows free trade.
